Add log statement for debugging Format login form

--- a/public/auth.html
+++ b/public/auth.html
@@ -20,6 +20,7 @@
                     <input type="email" name="email" placeholder="Email Address" class="border p-2 mb-2 block w-full" required>
                     <input type="password" name="password" placeholder="Password" class="border p-2 mb-2 block w-full" required>
                     <input type="password" name="confirm_password" placeholder="Confirm Password" class="border p-2 mb-2 block w-full" required>
+                    <input type="text" name="contact_info" placeholder="Contact Info" class="border p-2 mb-2 block w-full" required>
                     <select name="role" class="border p-2 mb-2 block w-full" required>
                         <option value="">Select Role</option>
                         <option value="farmer">Farmer</option>
