--- a/public/static/auth.html
+++ b/public/static/auth.html
@@ -5,38 +5,65 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Authentication</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+    <script>
+        async function handleRegister(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+            const data = Object.fromEntries(formData.entries());
+
+            const response = await fetch('/api/register', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            });
+
+            const result = await response.json();
+            if (response.ok) {
+                window.location.href = result.redirect;
+            } else {
+                document.getElementById('register-result').innerText = result.message;
+            }
+        }
+    </script>
 </head>
 <body class="bg-gray-100 p-4">
-    <div class="container mx-auto">
-        <h1 class="text-2xl font-bold mb-4">Create Account / Login</h1>
-        <div class="flex justify-around">
-            <div>
-                <h2 class="text-xl font-bold mb-2">Register</h2>
-                <form id="register-form" hx-post="/api/register" hx-trigger="submit" hx-target="#register-result" hx-swap="innerHTML">
-                    <input type="text" name="firstName" placeholder="First Name" class="border p-2 mb-2 block w-full" required>
-                    <input type="text" name="lastName" placeholder="Last Name" class="border p-2 mb-2 block w-full" required>
-                    <input type="email" name="email" placeholder="Email Address" class="border p-2 mb-2 block w-full" required>
-                    <input type="password" name="password" placeholder="Password" class="border p-2 mb-2 block w-full" required>
-                    <input type="password" name="confirm_password" placeholder="Confirm Password" class="border p-2 mb-2 block w-full" required>
-                    <input type="text" name="phoneNumber" placeholder="Phone Number" class="border p-2 mb-2 block w-full">
-                    <select name="role" class="border p-2 mb-2 block w-full" required>
-                        <option value="">Select Role</option>
-                        <option value="farmer">Farmer</option>
-                        <option value="retailer">Retailer</option>
-                    </select>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded">Register</button>
-                </form>
-                <div id="register-result"></div>
-                <p class="mt-4">Already registered? 
-                   <button class="text-blue-500"
-                       hx-get="/static/login.html"
-                       hx-target="#register-result"
-                       hx-swap="innerHTML">Login here</button>
-                </p>
+    <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
+        <h1 class="text-3xl font-bold text-center mb-6">Create Account</h1>
+        <form id="register-form" onsubmit="handleRegister(event)">
+            <div class="mb-4">
+                <input type="text" name="firstName" placeholder="First Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
-
-        </div>
+            <div class="mb-4">
+                <input type="text" name="lastName" placeholder="Last Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <input type="password" name="confirm_password" placeholder="Confirm Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <div class="mb-4">
+                <input type="text" name="phoneNumber" placeholder="Phone Number" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500">
+            </div>
+            <div class="mb-4">
+                <select name="role" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+                    <option value="">Select Role</option>
+                    <option value="farmer">Farmer</option>
+                    <option value="retailer">Retailer</option>
+                </select>
+            </div>
+            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Register</button>
+        </form>
+        <div id="register-result" class="mt-4 text-center text-red-500"></div>
+        <p class="mt-4 text-center">Already registered? 
+           <a href="/login" class="text-blue-500 underline">Login here</a>
+        </p>
     </div>
 </body>
 </html>
