--- a/public/static/login.html
+++ b/public/static/login.html
@@ -5,22 +5,51 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Login</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
-    <script src="https://unpkg.com/htmx.org@1.6.1"></script>
+    <script>
+        async function handleLogin(event) {
+            event.preventDefault();
+            const form = event.target;
+            const formData = new FormData(form);
+            const data = Object.fromEntries(formData.entries());
+
+            const response = await fetch('/api/login', {
+                method: 'POST',
+                headers: {
+                    'Content-Type': 'application/json'
+                },
+                body: JSON.stringify(data)
+            });
+
+            const result = await response.json();
+            if (response.ok) {
+                localStorage.setItem('token', result.token);
+                if (result.role === 'farmer') {
+                    window.location.href = '/farmer/dashboard';
+                } else if (result.role === 'retailer') {
+                    window.location.href = '/retailer/dashboard';
+                }
+            } else {
+                document.getElementById('login-result').innerText = result.message;
+            }
+        }
+    </script>
 </head>
 <body class="bg-gray-100 p-4">
-    <div class="container mx-auto">
-        <h1 class="text-2xl font-bold mb-4">Login</h1>
-        <div class="flex justify-around">
-            <div>
-                <form id="login-form" hx-post="/api/login" hx-trigger="submit" hx-target="#login-result" hx-swap="innerHTML">
-                    <input type="email" name="email" placeholder="Email Address" class="border p-2 mb-2 block w-full" required>
-                    <input type="password" name="password" placeholder="Password" class="border p-2 mb-2 block w-full" required>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded">Login</button>
-                </form>
-                <div id="login-result"></div>
-                <p class="mt-4">Don't have an account? <button class="text-blue-500" hx-get="/static/auth.html" hx-target="body" hx-swap="innerHTML">Register here</button></p>
+    <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
+        <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
+        <form id="login-form" onsubmit="handleLogin(event)">
+            <div class="mb-4">
+                <input type="email" name="email" placeholder="Email Address" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
-        </div>
+            <div class="mb-4">
+                <input type="password" name="password" placeholder="Password" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
+            </div>
+            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Login</button>
+        </form>
+        <div id="login-result" class="mt-4 text-center text-red-500"></div>
+        <p class="mt-4 text-center">Don't have an account? 
+           <a href="/auth" class="text-blue-500 underline">Register here</a>
+        </p>
     </div>
 </body>
 </html>
