--- a/public/static/auth.html
+++ b/public/static/auth.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Authentication</title>
+    <title>Sign Up</title>
     <link href="https://cdn.jsdelivr.net/npm/tailwindcss@2.2.19/dist/tailwind.min.css" rel="stylesheet">
     <script>
-        async function handleRegister(event) {
+        async function handleSignUp(event) {
             event.preventDefault();
             const form = event.target;
             const formData = new FormData(form);
@@ -22,17 +22,23 @@
 
             const result = await response.json();
             if (response.ok) {
-                window.location.href = result.redirect;
+                localStorage.setItem('token', result.token);
+                localStorage.setItem('userID', result.userID);
+                if (result.role === 'farmer') {
+                    window.location.href = '/farmer/dashboard';
+                } else if (result.role === 'retailer') {
+                    window.location.href = '/retailer/dashboard';
+                }
             } else {
-                document.getElementById('register-result').innerText = result.message;
+                document.getElementById('signup-result').innerText = result.message;
             }
         }
     </script>
 </head>
 <body class="bg-gray-100 p-4">
     <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
-        <h1 class="text-3xl font-bold text-center mb-6">Create Account</h1>
-        <form id="register-form" onsubmit="handleRegister(event)">
+        <h1 class="text-3xl font-bold text-center mb-6">Sign Up</h1>
+        <form id="signup-form" onsubmit="handleSignUp(event)">
             <div class="mb-4">
                 <input type="text" name="firstName" placeholder="First Name" class="border border-gray-300 p-3 rounded w-full focus:outline-none focus:ring-2 focus:ring-blue-500" required>
             </div>
@@ -58,10 +64,10 @@
                     <option value="retailer">Retailer</option>
                 </select>
             </div>
-            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Register</button>
+            <button type="submit" class="bg-blue-500 text-white p-3 rounded w-full hover:bg-blue-600 transition duration-200">Sign Up</button>
         </form>
-        <div id="register-result" class="mt-4 text-center text-red-500"></div>
-        <p class="mt-4 text-center">Already registered? 
+        <div id="signup-result" class="mt-4 text-center text-red-500"></div>
+        <p class="mt-4 text-center">Already have an account? 
            <a href="/login" class="text-blue-500 underline">Login here</a>
         </p>
     </div>
