--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -25,92 +25,159 @@
                 document.getElementById('create-product-form').setAttribute('hx-headers', JSON.stringify({ 'Authorization': `Bearer ${token}` }));
             }
         });
+
+        function toggleDropdown(id) {
+            const element = document.getElementById(id);
+            element.classList.toggle('hidden');
+        }
     </script>
 </head>
-<body class="bg-gray-100 p-4">
-    <div class="container mx-auto">
+<body class="bg-gray-100 flex">
+    <div class="header">
+        <a href="/">
+            <img src="/public/assets/PointaFam.jpg">
+        </a>
+    </div>
+    <!-- Sidebar -->
+    <div class="w-1/4 bg-white p-6 shadow-md">
+        <h2 class="text-2xl font-bold mb-6">Dashboard</h2>
+        <ul>
+            <li class="mb-4"><a href="#overview" class="text-blue-500 hover:underline">Overview</a></li>
+            <li class="mb-4"><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="toggleDropdown('add-product-form')">Add New Product</a></li>
+            <li class="mb-4"><a href="javascript:void(0);" class="text-blue-500 hover:underline" onclick="toggleDropdown('edit-product-form')">Edit Product</a></li>
+            <li class="mb-4"><a href="#inventory-tracking" class="text-blue-500 hover:underline">Inventory Tracking</a></li>
+            <li class="mb-4"><a href="#view-orders" class="text-blue-500 hover:underline">View Orders</a></li>
+            <li class="mb-4"><a href="#manage-profile" class="text-blue-500 hover:underline">Manage Profile</a></li>
+        </ul>
+    </div>
+
+    <!-- Main Content -->
+    <div class="w-3/4 p-6">
         <h1 class="text-3xl font-bold mb-6 text-center">Farmer Dashboard</h1>
 
-        <!-- User Profile Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold mb-4">User Profile</h2>
-            <div class="flex items-center mb-4">
-                <img src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4">
-                <div>
-                    <p id="user-name" class="text-lg font-bold">Loading...</p>
-                    <p id="user-email" class="text-gray-600">Loading...</p>
-                    <p id="user-location" class="text-gray-600">Loading...</p>
+        <!-- Overview Section -->
+        <div id="overview" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Overview</h2>
+            <div class="grid grid-cols-3 gap-4">
+                <div class="bg-white p-4 rounded-lg shadow-md">
+                    <h3 class="text-xl font-bold mb-2">Total Sales</h3>
+                    <p class="text-gray-600">$10,000</p>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-md">
+                    <h3 class="text-xl font-bold mb-2">Recent Orders</h3>
+                    <p class="text-gray-600">5 new orders</p>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-md">
+                    <h3 class="text-xl font-bold mb-2">Inventory Levels</h3>
+                    <p class="text-gray-600">20 items in stock</p>
+                </div>
+                <div class="bg-white p-4 rounded-lg shadow-md">
+                    <h3 class="text-xl font-bold mb-2">Notifications</h3>
+                    <p class="text-gray-600">2 new messages</p>
                 </div>
             </div>
-            <button class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Edit Profile</button>
         </div>
 
-        <!-- Product Management Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold mb-4">Product Management</h2>
-            <form id="create-product-form" hx-post="/api/products" hx-target="#products-list" hx-swap="outerHTML" enctype="multipart/form-data">
-                <div class="mb-4">
-                    <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded">
-                </div>
-                <div class="mb-4">
-                    <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
-                </div>
-                <div class="mb-4">
-                    <input type="number" name="price" placeholder="Product Price" class="border p-2 w-full rounded">
-                </div>
-                <div class="mb-4">
-                    <input type="file" name="image" class="border p-2 w-full rounded">
-                </div>
-                <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
-            </form>
+        <!-- Add New Product Section -->
+        <div id="add-product" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
+            <div id="add-product-form" class="hidden">
+                <form id="create-product-form" hx-post="/api/products" hx-target="#products-list" hx-swap="outerHTML" enctype="multipart/form-data">
+                    <div class="mb-4">
+                        <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="price" placeholder="Product Price" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="file" name="image" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <select name="category" class="border p-2 w-full rounded">
+                            <option value="">Select Category</option>
+                            <option value="fruits">Fruits</option>
+                            <option value="vegetables">Vegetables</option>
+                            <option value="dairy">Dairy</option>
+                            <option value="meat">Meat</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
+                </form>
+            </div>
             <div id="products-list" hx-get="/api/products" hx-trigger="load" hx-target="#products-list" hx-swap="innerHTML">
                 <!-- Products will be loaded here dynamically -->
             </div>
         </div>
 
-        <!-- Order Management Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold mb-4">Order Management</h2>
-            <div id="orders-list" hx-get="/api/orders" hx-trigger="load" hx-target="#orders-list" hx-swap="innerHTML">
-                <!-- Orders will be loaded here dynamically -->
+        <!-- Edit Product Section -->
+        <div id="edit-product" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Edit Product</h2>
+            <div id="edit-product-form" class="hidden">
+                <form id="edit-product-form" hx-put="/api/products/:id" hx-target="#products-list" hx-swap="outerHTML" enctype="multipart/form-data">
+                    <div class="mb-4">
+                        <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="price" placeholder="Product Price" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <input type="file" name="image" class="border p-2 w-full rounded">
+                    </div>
+                    <div class="mb-4">
+                        <select name="category" class="border p-2 w-full rounded">
+                            <option value="">Select Category</option>
+                            <option value="fruits">Fruits</option>
+                            <option value="vegetables">Vegetables</option>
+                            <option value="dairy">Dairy</option>
+                            <option value="meat">Meat</option>
+                        </select>
+                    </div>
+                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Update Product</button>
+                </form>
             </div>
         </div>
 
-        <!-- Inventory Management Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold mb-4">Inventory Management</h2>
+        <!-- Inventory Tracking Section -->
+        <div id="inventory-tracking" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Inventory Tracking</h2>
             <div id="inventory-list" hx-get="/api/inventory" hx-trigger="load" hx-target="#inventory-list" hx-swap="innerHTML">
                 <!-- Inventory will be loaded here dynamically -->
             </div>
         </div>
 
-        <!-- Sales Analytics Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold mb-4">Sales Analytics</h2>
-            <div id="sales-analytics" hx-get="/api/sales-analytics" hx-trigger="load" hx-target="#sales-analytics" hx-swap="innerHTML">
-                <!-- Sales analytics will be loaded here dynamically -->
+        <!-- View Orders Section -->
+        <div id="view-orders" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">View Orders</h2>
+            <div id="orders-list" hx-get="/api/orders" hx-trigger="load" hx-target="#orders-list" hx-swap="innerHTML">
+                <!-- Orders will be loaded here dynamically -->
             </div>
         </div>
 
-        <!-- Communication Tools Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md mb-6">
-            <h2 class="text-2xl font-bold mb-4">Communication Tools</h2>
-            <div id="messages" hx-get="/api/messages" hx-trigger="load" hx-target="#messages" hx-swap="innerHTML">
-                <!-- Messages will be loaded here dynamically -->
-            </div>
-            <div id="feedback" hx-get="/api/feedback" hx-trigger="load" hx-target="#feedback" hx-swap="innerHTML">
-                <!-- Customer feedback will be loaded here dynamically -->
-            </div>
-        </div>
-
-        <!-- Support and Resources Section -->
-        <div class="bg-white p-6 rounded-lg shadow-md">
-            <h2 class="text-2xl font-bold mb-4">Support and Resources</h2>
-            <div id="resources" hx-get="/api/resources" hx-trigger="load" hx-target="#resources" hx-swap="innerHTML">
-                <!-- Resources will be loaded here dynamically -->
-            </div>
-            <div id="faqs" hx-get="/api/faqs" hx-trigger="load" hx-target="#faqs" hx-swap="innerHTML">
-                <!-- FAQs will be loaded here dynamically -->
+        <!-- Manage Profile Section -->
+        <div id="manage-profile" class="mb-6">
+            <h2 class="text-2xl font-bold mb-4">Manage Profile</h2>
+            <div class="bg-white p-6 rounded-lg shadow-md">
+                <div class="flex items-center mb-4">
+                    <img src="profile_picture_url" alt="Profile Picture" class="w-16 h-16 rounded-full mr-4">
+                    <div>
+                        <p id="user-name" class="text-lg font-bold">Loading...</p>
+                        <p id="user-email" class="text-gray-600">Loading...</p>
+                        <p id="user-location" class="text-gray-600">Loading...</p>
+                    </div>
+                </div>
+                <button class="bg-blue-500 text-white p-2 rounded hover:bg-blue-600 transition duration-200">Edit Profile</button>
             </div>
         </div>
     </div>
