feat: add logo to body

--- a/public/static/login.html
+++ b/public/static/login.html
@@ -36,6 +36,12 @@
     </script>
 </head>
 <body class="bg-gray-100 p-4">
+    <div class="header">
+        <a href="/">
+            <img src="/public/assets/PointaFam.png" alt="PointaFam Logo">
+        </a>
+        <span>PointaFam</span>
+    </div>
     <div class="container mx-auto max-w-md bg-white rounded-lg shadow-md p-6">
         <h1 class="text-3xl font-bold text-center mb-6">Login</h1>
         <form id="login-form" onsubmit="handleLogin(event)">
