--- a/public/static/retailer_dashboard.html
+++ b/public/static/retailer_dashboard.html
@@ -25,6 +25,12 @@
     </script>
 </head>
 <body class="bg-gray-100 p-4">
+    <div class="header">
+        <a href="/">
+            <img src="/public/assets/PointaFam.png" alt="PointaFam Logo">
+        </a>
+        <span>PointaFam</span>
+    </div>
     <div class="container mx-auto">
         <h1 class="text-3xl font-bold mb-6 text-center">Retailer Dashboard</h1>
 
