--- a/index.html
+++ b/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Welcome to PointaFam</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet"> <!-- Google Fonts -->
     <style>
         body {
             background-color: #f0f4f8; /* Light background color */
-            font-family: Arial, sans-serif; /* Clean font */
+            font-family: 'Roboto', sans-serif; /* Modern font */
             margin: 0;
             padding: 0;
             display: flex;
@@ -15,16 +16,46 @@
             align-items: center;
             height: 100vh; /* Full viewport height */
             text-align: center;
+            color: #34495e; /* Medium dark text color */
+            position: relative; /* Allow absolute positioning for buttons */
+        }
+        .header {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            display: flex;
+            align-items: center;
+        }
+        .header img {
+            width: 50px; /* Set logo size */
+            height: auto; /* Maintain aspect ratio */
+            margin-right: 10px; /* Space between logo and text */
+        }
+        .header span {
+            font-size: 1.5rem; /* Font size for logo text */
+            font-style: italic; /* Italic style for text */
+            color: #2c3e50; /* Darker text color */
+        }
+        .container {
+            max-width: 600px; /* Limit container width */
+            padding: 20px;
+            background-color: white; /* White background for content */
+            border-radius: 10px; /* Rounded corners */
+            box-shadow: 0 4px 20px rgba(0, 0, 0, 0.1); /* Subtle shadow */
         }
         h1 {
-            font-size: 3rem; /* Large heading */
+            font-size: 2.5rem; /* Adjusted heading size */
             color: #2c3e50; /* Darker text color */
             margin-bottom: 20px;
         }
         p {
-            font-size: 1.2rem; /* Slightly larger paragraph text */
-            color: #34495e; /* Medium dark text color */
+            font-size: 1.1rem; /* Slightly larger paragraph text */
             margin-bottom: 30px;
+        }
+        .button-container {
+            display: flex;
+            flex-direction: column;
+            gap: 15px; /* Space between buttons */
         }
         button {
             background-color: #3498db; /* Blue button color */
@@ -34,18 +65,52 @@
             border-radius: 5px; /* Rounded corners */
             font-size: 1rem;
             cursor: pointer;
-            transition: background-color 0.3s ease; /* Smooth transition */
+            transition: background-color 0.3s ease, transform 0.2s ease; /* Smooth transition */
         }
         button:hover {
             background-color: #2980b9; /* Darker blue on hover */
+            transform: translateY(-2px); /* Slight lift effect on hover */
+        }
+        .nav-buttons {
+            position: absolute;
+            top: 20px; /* Distance from the top of the page */
+            right: 20px; /* Distance from the right of the page */
+        }
+        .nav-buttons button {
+            background-color: #e67e22; /* Different color for navigation buttons */
+            margin-left: 10px; /* Space between buttons */
+        }
+        footer {
+            position: absolute;
+            bottom: 20px;
+            left: 50%;
+            transform: translateX(-50%);
+            font-size: 0.9rem;
         }
     </style>
 </head>
 <body>
-    <div>
+    <div class="header">
+        <a href="/">
+            <img src="/public/assets/PointaFam.jpg">
+        </a>
+    </div>
+
+    <div class="nav-buttons">
+        <button onclick="window.location.href='/about'">About Us</button>
+        <button onclick="window.location.href='/contact'">Contact Us</button>
+        <button onclick="window.location.href='/cart'">View Cart</button> <!-- Cart Button -->
+    </div>
+
+    <div class="container">
         <h1>Welcome to PointaFam!</h1>
         <p>Your journey to connect with farmers and retailers starts here.</p>
+        
         <button onclick="window.location.href='/auth'">Get Started</button>
     </div>
+
+    <footer>
+        &copy; 2024 PointaFam. All rights reserved.
+    </footer>
 </body>
 </html>
