--- a/public/static/farmer_dashboard.html
+++ b/public/static/farmer_dashboard.html
@@ -35,7 +35,7 @@
 <body class="bg-gray-100 flex">
     <div class="header">
         <a href="/">
-            <img src="/public/assets/PointaFam.jpg">
+            <img src="/public/assets/PointaFam.jpg" alt="PointaFam Logo">
         </a>
     </div>
     <!-- Sidebar -->
@@ -78,43 +78,48 @@
             </div>
         </div>
 
-        <!-- Add New Product Section -->
-        <div id="add-product" class="mb-6">
-            <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
-            <div id="add-product-form" class="hidden">
-                <form id="create-product-form" hx-post="/api/products" hx-target="#products-list" hx-swap="outerHTML" enctype="multipart/form-data">
-                    <div class="mb-4">
-                        <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <input type="number" name="price" placeholder="Product Price" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <input type="file" name="image" class="border p-2 w-full rounded">
-                    </div>
-                    <div class="mb-4">
-                        <select name="category" class="border p-2 w-full rounded">
-                            <option value="">Select Category</option>
-                            <option value="fruits">Fruits</option>
-                            <option value="vegetables">Vegetables</option>
-                            <option value="dairy">Dairy</option>
-                            <option value="meat">Meat</option>
-                        </select>
-                    </div>
-                    <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
-                </form>
+       <!-- Add New Product Section -->
+<div id="add-product" class="mb-6">
+    <h2 class="text-2xl font-bold mb-4">Add New Product</h2>
+    <div id="add-product-form" class="hidden">
+        <form id="create-product-form" hx-post="/api/products" hx-target="#products-list" hx-swap="outerHTML" enctype="multipart/form-data">
+            <div class="mb-4">
+                <input type="text" name="name" placeholder="Product Name" class="border p-2 w-full rounded" required>
             </div>
-            <div id="products-list" hx-get="/api/products" hx-trigger="load" hx-target="#products-list" hx-swap="innerHTML">
-                <!-- Products will be loaded here dynamically -->
+            <div class="mb-4">
+                <input type="text" name="description" placeholder="Product Description" class="border p-2 w-full rounded">
             </div>
-        </div>
-
+            <div class="mb-4">
+                <input type="number" step="0.01" name="price" placeholder="Product Price" class="border p-2 w-full rounded" required>
+            </div>
+            <div class="mb-4">
+                <input type="number" name="quantity" placeholder="Product Quantity" class="border p-2 w-full rounded" required>
+            </div>
+            <div class="mb-4">
+                <input type="file" name="image" class="border p-2 w-full rounded">
+            </div>
+            <div class="mb-4">
+                <select name="category" class="border p-2 w-full rounded" required>
+                    <option value="">Select Category</option>
+                    <option value="fruits">Fruits</option>
+                    <option value="vegetables">Vegetables</option>
+                    <option value="dairy">Dairy</option>
+                    <option value="meat">Meat</option>
+                </select>
+            </div>
+            <div class="mb-4">
+                <input type="checkbox" name="availability" class="mr-2"> Available
+            </div>
+            <div class="mb-4">
+                <input type="number" name="farm_id" placeholder="Farm ID" class="border p-2 w-full rounded">
+            </div>
+            <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Add Product</button>
+        </form>
+    </div>
+    <div id="products-list" hx-get="/api/products" hx-trigger="load" hx-target="#products-list" hx-swap="innerHTML">
+        <!-- Products will be loaded here dynamically -->
+    </div>
+</div>
         <!-- Edit Product Section -->
         <div id="edit-product" class="mb-6">
             <h2 class="text-2xl font-bold mb-4">Edit Product</h2>
@@ -143,6 +148,12 @@
                             <option value="dairy">Dairy</option>
                             <option value="meat">Meat</option>
                         </select>
+                    </div>
+                    <div class="mb-4">
+                        <input type="checkbox" name="availability" class="mr-2"> Available
+                    </div>
+                    <div class="mb-4">
+                        <input type="number" name="farm_id" placeholder="Farm ID" class="border p-2 w-full rounded">
                     </div>
                     <button type="submit" class="bg-blue-500 text-white p-2 rounded w-full hover:bg-blue-600 transition duration-200">Update Product</button>
                 </form>
