--- a/public/static/products_list.html
+++ b/public/static/products_list.html
@@ -1,5 +1,5 @@
 <ul>
-    {{ range .products }}
+    {{ range .Products }}
     <li class="border p-2 mb-2">
         <div class="flex justify-between items-center">
             <div>
